WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49680
AudioContext should not include "HTMLNames.h"
https://bugs.webkit.org/show_bug.cgi?id=49680
Summary
AudioContext should not include "HTMLNames.h"
Chris Rogers
Reported
2010-11-17 12:00:49 PST
AudioContext should not include "HTMLNames.h"
Attachments
Patch
(1014 bytes, patch)
2010-11-17 12:02 PST
,
Chris Rogers
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2010-11-17 12:02:57 PST
Created
attachment 74141
[details]
Patch
WebKit Commit Bot
Comment 2
2010-11-18 12:45:18 PST
The commit-queue encountered the following flaky tests while processing
attachment 74141
[details]
: compositing/iframes/overlapped-nested-iframes.html fast/dom/Geolocation/timestamp.html Please file bugs against the tests. These tests were authored by
simon.fraser@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3
2010-11-18 15:31:27 PST
The commit-queue encountered the following flaky tests while processing
attachment 74141
[details]
: accessibility/aria-activedescendant-crash.html animations/suspend-resume-animation.html Please file bugs against the tests. These tests were authored by
adele@apple.com
,
cfleizach@apple.com
, and
cmarrin@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2010-11-18 20:38:22 PST
Comment on
attachment 74141
[details]
Patch Rejecting patch 74141 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sl', 'build', '--no-clean', '--no-update', '--build-style=both']" exit_code: 2 Last 500 characters of output: normal x86_64 c++ com.apple.compilers.gcc.4_2 CompileC /Projects/CommitQueue/WebKitBuild/WebCore.build/Debug/WebCore.build/Objects-normal/x86_64/SVGPolyElement.o /Projects/CommitQueue/WebCore/svg/SVGPolyElement.cpp normal x86_64 c++ com.apple.compilers.gcc.4_2 CompileC /Projects/CommitQueue/WebKitBuild/WebCore.build/Debug/WebCore.build/Objects-normal/x86_64/SVGPatternElement.o /Projects/CommitQueue/WebCore/svg/SVGPatternElement.cpp normal x86_64 c++ com.apple.compilers.gcc.4_2 (408 failures) Full output:
http://queues.webkit.org/results/6210067
Chris Rogers
Comment 5
2010-11-19 10:15:02 PST
Comment on
attachment 74141
[details]
Patch putting back in commit queue - was kicked out for unrelated problem
WebKit Commit Bot
Comment 6
2010-11-19 11:54:44 PST
The commit-queue encountered the following flaky tests while processing
attachment 74141
[details]
: compositing/iframes/overlapped-nested-iframes.html fast/workers/storage/use-same-database-in-page-and-workers.html Please file bugs against the tests. These tests were authored by
dumi@chromium.org
and
simon.fraser@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7
2010-11-19 12:25:55 PST
The commit-queue encountered the following flaky tests while processing
attachment 74141
[details]
: fast/profiler/throw-exception-from-eval.html Please file bugs against the tests. These tests were authored by
kmccullough@apple.com
,
oliver@apple.com
, and
timothy@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 8
2010-11-19 12:27:25 PST
Comment on
attachment 74141
[details]
Patch Clearing flags on attachment: 74141 Committed
r72426
: <
http://trac.webkit.org/changeset/72426
>
WebKit Commit Bot
Comment 9
2010-11-19 12:27:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug