third_party/WebKit/WebCore/webaudio/AudioContext.cpp
@@ -44,7 +44,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Document.h"
 #include "HRTFDatabaseLoader.h"
 #include "HRTFPanner.h"
-#include "HTMLNames.h"
 #include "HighPass2FilterNode.h"
 #include "JavaScriptAudioNode.h"
 #include "LowPass2FilterNode.h"
